--- a/MasterDetail2017/MasterDetail2017/MainWindow.xaml
+++ b/MasterDetail2017/MasterDetail2017/MainWindow.xaml
@@ -4,8 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MasterDetail2017"
+        xmlns:converter="clr-namespace:MasterDetail2017.Converters"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
+    <Window.Resources>
+        <converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -16,15 +21,22 @@
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        <Label Grid.ColumnSpan="2" Content="{Binding MasterDetailLabel}" />
+        <Label Grid.ColumnSpan="2"  Content="{Binding MasterDetailLabel}" >
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDown" >
+                    <i:InvokeCommandAction Command="{Binding MouseOverCommand,RelativeSource={RelativeSource AncestorType={x:Type Grid},Mode=FindAncestor}}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </Label>
         <ListView Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" ItemsSource="{Binding ListPersonne}" SelectedItem="{Binding SelectedPersonne}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Nom}" />
                 </DataTemplate>
             </ListView.ItemTemplate>
-        </ListView>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Nom,  UpdateSourceTrigger=PropertyChanged}" />
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Nom1,Mode=TwoWay}" />
+            </ListView> 
+        <Button Grid.Row="2" Content="Click here" Command="{Binding ClickCommand}" />
+        <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding SelectedPersonne.Nom,  UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock Grid.Row="2" Grid.Column="1" Visibility="{Binding IsVisible,Converter={StaticResource BooleanToVisibilityConverter}}" Text="{Binding SelectedPersonne.Prenom,Mode=TwoWay}" />
     </Grid>
 </Window>
